tests/errors/semantic/blocking/UNDEFINED_LAMBDA_VARIABLE.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
a = lambda x: 1+b
